# 3-DOF-RPR-Robot

./: .gitignore  pyproject.toml
rpr/simulator/: calc_data.py  main.py
rpr/simulator/data/: test_1000_250_500_10000.csv  test_calc_1000_250_500_10000.csv
src/models/: data.py  fit.py  trainer.py
src/models/FFNNS/: FFNNS_history.npy  model.py
src/models/dense/: data.py  fit.py  model.py
src/models/dense/model/: Dense_1_history.npy
src/rpr/: main.py
src/rpr/module/: __init__.py  leg.py  model.py
src/rpr/utils/: logging.py  offset.py  singularity.py  target.py
tests/: L_str.py  calc_data.py
