[tool.poetry]
name = "rpr"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
tqdm = "^4.67.1"
ruff = "^0.8.1"

[tool.poetry.group.test.dependencies]
loguru = "^0.7.2"

[tool.poetry.group.report.dependencies]
matplotlib = "^3.9.3"

[tool.poetry.group.ds.dependencies]
numpy = "^2.1.3"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"

[tool.poetry.group.ml.dependencies]
torch = {version = "^2.5.1+cu118", source = "pytorch-gpu"}
torchsummary = "^1.5.1"

[[tool.poetry.source]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
